add keywords to notebook

--- a/TrainerApi.ipynb
+++ b/TrainerApi.ipynb
@@ -21,6 +21,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### keywords: Train a transformer model, Train BERT model, آموزش Bert, آموزش ترنسفورمر"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### 1. Here is how we can easily preprocess the GLUE MRPC dataset using dynamic padding."
    ]
   },
