change trainer notebook

--- a/TrainerApi.ipynb
+++ b/TrainerApi.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 🤗 Transformers provider a Tariner API to easily train or fine-tune Ttransformer models"
+    "## 🤗 Transformers provider a Trainer API to easily train or fine-tune Ttransformer models"
    ]
   },
   {
